--- a/index.html
+++ b/index.html
@@ -6,32 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.8" aria-hidden="true">
     <title>Esp32</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="ESP32.ico">
+    <link rel="icon" type="image/x-icon" href="media/ESP32.ico">
 </head>
 <body>
-    
-    <header class="header0">
-        <div class="con"><h3 class="title">Esp32</h3></div>
-        <nav class="navbar">
-            <a href="#"><p id="tuto" class="clickables">Tuto</p></a>
-            <a href="#"><p id="test" class="clickables">Quiz!</p></a>
-            <a href="#"><p class="clickables">Team</p></a>
-        </nav>
-    </header>
-
-    <main>
-        <div class="esp32-container">
-            <img src="esp.png" height="250" width="250" alt="ESP32 Model" class="esp32-image">
-            <div class="speech-bubble">
-                <p class="espbubble" id="dialog-1">Bonjour! <br> <span class="ss">(clicker moi ;) )</span></p>
-                <p id="dialog-2" style="display:none"> Je m'apelle l'ESP32 🙂</p>
-                <p id="dialog-3" style="display:none"> Je suis un microcontroleur! 📡</p>
-                <p id="dialog-4" style="display:none"> Commencer par le tuto pour mieux me connaître 😊</p>
+    <div class="test1">
+        <div class="dropdown">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a class="drpA" href="#">Tuto</a>
+                <a class="drpA" href="quiz/index.html">Quiz!</a>
+                <a class="drpA" href="#">Team</a>
             </div>
-            <div class="con2"><p id="okBtn" style="display: none">Ok!</p></div>
         </div>
-    </main>
-    <footer>@COPYRIGHT-2023 All rights reserved.</footer>
+        <header class="header0">
+            <div class="con"><h3 class="title">Esp32</h3></div>
+            <nav class="navbar">
+                <a href="#"><p id="tuto" class="clickables">Tuto</p></a>
+                <a href="quiz/index.html"><p style="color: gray;" id="test" class="clickables">Quiz!</p></a>
+                <a href="#"><p class="clickables">Team</p></a>
+            </nav>
+        </header>
+        <main>
+            <div class="esp32-container">
+                <img src="media/esp.png" height="250" width="250" alt="ESP32 Model" class="esp32-image">
+                <div class="speech-bubble">
+                    <p class="espbubble" id="dialog-1">Bonjour! <br> <span class="ss">(clicker moi ;) )</span></p>
+                    <p id="dialog-2" style="display:none"> Je m'apelle l'ESP32 🙂</p>
+                    <p id="dialog-3" style="display:none"> Je suis un microcontroleur! 📡</p>
+                    <p id="dialog-4" style="display:none"> Commencer par le tuto pour mieux me connaître 😊</p>
+                </div>
+                <div class="con2"><p id="okBtn" style="display: none">Ok!</p></div>
+            </div>
+            
+        </main>
+        <footer>@COPYRIGHT-2023 All rights reserved.</footer>
+        <p class="wtf">bro what u do?</p>
+        <img height="75" width="75" class="wtfI" src="media/9k.png" alt="">
+    </div>
+    <audio id="bassa" src="media/bassa.mp3"></audio>
+    <audio id="iiniin" src="media/iiniin.mp3"></audio>
+    <audio id="lezgoo" src="media/lezgoo.mp3"></audio>
+    <audio id="tr9tr9" src="media/tr9tr9.mp3"></audio>
+    <audio id="sus" src="media/sus.mp3"></audio>
     <script src="script.js"></script>
 </body>
 </html>
