--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="dropdown-content">
                 <a class="drpA" href="#">Tuto</a>
                 <a class="drpA" href="quiz/index.html">Quiz!</a>
-                <a class="drpA" href="#">Team</a>
+                <a class="drpA" href="team/members.html">Team</a>
             </div>
         </div>
         <header class="header0">
@@ -23,7 +23,7 @@
             <nav class="navbar">
                 <a href="#"><p id="tuto" class="clickables">Tuto</p></a>
                 <a href="quiz/index.html"><p style="color: gray;" id="test" class="clickables">Quiz!</p></a>
-                <a href="#"><p class="clickables">Team</p></a>
+                <a href="team/members.html"><p class="clickables">Team</p></a>
             </nav>
         </header>
         <main>
