--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="navbar">
                 <a href="#"><p id="tuto" class="clickables">Tuto</p></a>
                 <a href="quiz/index.html"><p style="color: gray;" id="test" class="clickables">Quiz!</p></a>
-                <a href="team/Untitled-2..html"><p class="clickables">Team</p></a>
+                <a href="team/Untitled-2.html"><p class="clickables">Team</p></a>
             </nav>
         </header>
         <main>
